# predixlab-collector

./: .dockerignore  .env.example  BEST_PRACTICES.md  Dockerfile  README.md  REFACTORING_SUMMARY.md  config.py  docker-compose.yml  main.py  notification.py  pyproject.toml  utils.py
.github/: copilot-instructions.md
.github/workflows/: docker-build.yml  test.yml
collectors/cn_calendar/: __init__.py  collector.py
collectors/cn_index/: __init__.py  collector.py
collectors/us_calendar/: __init__.py  collector.py
collectors/us_index/: __init__.py  collector.py
collectors/yahoo/: __init__.py  collector.py  normalize.py
tests/: __init__.py  test_cn_calendar_collector.py  test_cn_index_collector.py  test_config.py  test_notification.py  test_us_calendar_collector.py  test_us_index_collector.py  test_utils.py  test_yahoo_collector.py  test_yahoo_normalizer.py
