[project]
name = "qstock-collector"
version = "0.1.0"
description = "Independent stock market data service using yfinance and Yahoo Query - extracted from qstock"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.5",
    "bs4>=0.0.2",
    "fire>=0.7.0",
    "joblib>=1.4.2",
    "loguru>=0.7.3",
    "lxml>=6.0.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "requests>=2.32.4",
    "soupsieve>=2.7",
    "tqdm>=4.67.1",
    "yahooquery>=2.4.1",
    "python-dateutil>=2.8.2",
    "pydantic-settings>=2.10.1",
    "pymongo>=4.10.1",
    "azure-communication-email>=1.0.0",
]
